# public-api-rs

./: .gitignore  Cargo.toml  README.md  client.rs  main.rs
animal/: dog_ceo_api.rs  kinduff_dog_api.rs  meow_fact_api.rs  mod.rs  random_dog.rs  random_duck_api.rs  random_fox_api.rs  shibe_online_api.rs
anime/: animechan_api.rs  mod.rs
