[package]
name = "public-api-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "public-api-rs"
path = "main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"